deploy/kubernetes/simple/ingress.yaml
# SPDX-FileCopyrightText: 2025 TEMPL Team
# SPDX-License-Identifier: MIT
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: templ-pipeline-ingress
  namespace: fulop-ns
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "templ.dyn.cloud.e-infra.cz"
      secretName: templ-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "templ.dyn.cloud.e-infra.cz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: templ-pipeline-svc
                port:
                  number: 80
